--- a/Listas_Parte_I.ipynb
+++ b/Listas_Parte_I.ipynb
@@ -1301,7 +1301,10 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "abecedario=[a,b,c,d,e,f,g,h,i,j,k,l,m,n]\n",
+        "abecedario.a"
+      ],
       "metadata": {
         "id": "nOcwRzu6FFrm"
       },
