--- a/Taller_Forecasting_Ocupacion.ipynb
+++ b/Taller_Forecasting_Ocupacion.ipynb
@@ -2356,7 +2356,7 @@
         "# Proponga una arquitectura que permita recibir como parametros de entrada no solo los historicos de la\n",
         "# serie temporal sino tambien información adicional relevante como por ejemplo el mes para el cual se\n",
         "# realiza la predicción, o el número de dias festivos del mes de predicción\n",
-        "\n",
+        "# agregar a la red neuronal no solo el resumen sino tambien otra red neuronal\n",
         "historical_data = data['numTrx'][:-1][-N:].values.reshape(-1, 1)\n",
         "print(historical_data)\n",
         "historical_data_scaled = scaler.transform(historical_data)\n",
